# ligamagic_scrapper

./: README.md  main.py  pyproject.toml
assets/inputs/: cardlist_example.txt  stores_example.csv
assets/outputs/: cards_example.csv
liga_magic/: webpage.py
tests/: test_card.py
